PP-449: Fix accordion max widths on mobile.

--- a/public/themes/custom/helfi_paatokset/src/scss/components/accordion/_accordion.scss
+++ b/public/themes/custom/helfi_paatokset/src/scss/components/accordion/_accordion.scss
@@ -38,6 +38,14 @@
 
   .accordion-item__content__inner {
     padding: 0;
+    max-width: 90vw;
+
+    @include breakpoint($breakpoint-s) {
+      max-width: 95vw;
+    }
+    @include breakpoint($breakpoint-m) {
+      max-width: 100vw;
+    }
   }
 
   .accordion__wrapper.handorgel {
